[tool.poetry]
name = "meusitedefinitivo"
version = "0.1.0"
description = "Este é meu site definitivo, feito com Flask"
authors = ["Rinaldo <rinaldomm@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
